weapon system up and running

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,10 +14,13 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Data.Damage",DevComment="")
 +GameplayTagList=(Tag="Data.Heal",DevComment="")
 +GameplayTagList=(Tag="Event.Abilities.Changed",DevComment="")
++GameplayTagList=(Tag="Event.Weapon.Equip",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Damage.Burst",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Dash",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Dash.Active",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Heal.Burst",DevComment="")
 +GameplayTagList=(Tag="GASAB.Player.Movement.Ability.Dash",DevComment="")
 +GameplayTagList=(Tag="Status.Stamina.Regen",DevComment="")
++GameplayTagList=(Tag="Weapon.Melee.Wrench",DevComment="")
++GameplayTagList=(Tag="Weapon.Ranged.WackyGun01",DevComment="")
 
