--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -14,11 +15,14 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Data.Damage",DevComment="")
 +GameplayTagList=(Tag="Data.Heal",DevComment="")
 +GameplayTagList=(Tag="Event.Abilities.Changed",DevComment="")
++GameplayTagList=(Tag="Event.HitScan.End",DevComment="")
++GameplayTagList=(Tag="Event.HitScan.Start",DevComment="")
 +GameplayTagList=(Tag="Event.Weapon.Equip",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Damage.Burst",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Dash",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Dash.Active",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Heal.Burst",DevComment="")
++GameplayTagList=(Tag="GASAB.MeleeAttack.WrenchStrike",DevComment="")
 +GameplayTagList=(Tag="GASAB.Player.Movement.Ability.Dash",DevComment="")
 +GameplayTagList=(Tag="Status.Stamina.Regen",DevComment="")
 +GameplayTagList=(Tag="Weapon.Melee.Wrench",DevComment="")
